--- a/index.html
+++ b/index.html
@@ -5,19 +5,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="programming chatbot">
+    <meta name="description" content="მოგესალმებით, მე ილიაუნის “ჩეტბოტი” ვარ და ვფლობ სუპერ ტექნოლოგიურ ძალებს.">
     <meta name="author" content="unilab">
+    <meta property="og:title" content="პროგრამირების ჩეტბოტი" />
+    <meta property="og:description" 
+    content="მოგესალმებით, მე ილიაუნის “ჩეტბოტი” ვარ და ვფლობ სუპერ ტექნოლოგიურ ძალებს." />
+
     <link rel="stylesheet" href="assets/styles/css/style.css">
     <!-- favIcon -->
     <link rel="icon" href="assets/images/chatbot/chatBot.ico">
     <link rel="icon" type="image/png" href="assets/images/chatbot/chatBot.png">
-    <title>programming chatbot</title>
+    <title>პროგრამირების ჩეტბოტი</title>
 </head>
 
 <body>
 
     <div class="background-image"></div>
-
 
     <div class="chatbot__container">
             <iframe id="chatbotIframe" src="https://animachatbotics.com/Scripts/bot-MBD/bot/index3.html?botId=4028&tone=0" frameborder="0"></iframe>
